--- a/VitalizingSerenade/manifest.json
+++ b/VitalizingSerenade/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Vitalizing_Serenade",
-  "version_number": "1.0.0",
+  "version_number": "0.1.0",
   "website_url": "https://github.com/binbinmods/VitalizingSerenade",
-  "description": "A fun mod, showing what life would be like if you were to have Vitalizing Serenade.",
+  "description": "A fun mod, makes Vitalizing Serenade more prominant, more snergistic, and potentially better.",
   "dependencies": ["BepInEx-BepInExPack_AcrossTheObelisk-5.4.23"]
 }
