--- a/VitalizingSerenade/manifest.json
+++ b/VitalizingSerenade/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Vitalizing_Serenade",
-  "version_number": "0.1.0",
+  "version_number": "0.1.1",
   "website_url": "https://github.com/binbinmods/VitalizingSerenade",
-  "description": "A fun mod, makes Vitalizing Serenade more prominant, more snergistic, and potentially better.",
-  "dependencies": ["BepInEx-BepInExPack_AcrossTheObelisk-5.4.23"]
+  "description": "A fun mod, makes Vitalizing Serenade more prominant, more synergistic, and potentially better.",
+  "dependencies": ["meds-Obeliskial_Content-1.5.5","meds-Obeliskial_Essentials-1.4.8"]
 }
